MAPRHADOOP-562: Removed duplication for add-opens options